<resources>
    <string name="app_name">NSuns</string>
    <string name="tab_text_1">Day 1\nV. Bench</string>
    <string name="tab_text_2">Day 2\nSquats</string>
    <string name="tab_text_3">Day 3\nOHP</string>
    <string name="tab_text_4">Day 4\nDeads</string>
    <string name="tab_text_5">Day 5\nBench</string>
    <string name="tab_text_6">Pullup\nTreaty</string>
    <string name="navigation_drawer_open">Drawer Open</string>
    <string name="navigation_drawer_close">Drawer Closed</string>

    <string name="navigation_tms">Change TMs</string>
    <string name="navigation_pb_records">Add PB records</string>
    <string name="navigation_generate_config">Generate Config File</string>

    <string name="current_field_DL">current Deadlift</string>
    <string name="current_field_OHP">current OHP</string>
    <string name="current_field_Bench">current Bench</string>
    <string name="current_field_Squat">current Squat</string>

    <string name="updateTM">Update</string>
    <string name="updateReloadTM">Update and Reload</string>
    <string name="revertTM">Revert Changes</string>

    <string name="current_field_DL_PB">current Deadlift</string>
    <string name="current_field_OHP_PB">current OHP</string>
    <string name="current_field_Bench_PB">current Bench</string>
    <string name="current_field_Squat_PB">current Squat</string>

    <string name="updatePB">Update</string>
    <string name="updateReloadPB">Update and Reload</string>
    <string name="revertPB">Revert Changes</string>

</resources>
