<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mzha.nsuns.UpdateTMs">

    <TextView
        android:id="@+id/currentDL_PB"
        android:layout_width="132dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:text="@string/current_field_DL_PB"
        app:layout_constraintEnd_toStartOf="@+id/editDL_PB"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/currentBench_PB" />

    <TextView
        android:id="@+id/currentBench_PB"
        android:layout_width="135dp"
        android:layout_height="43dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:text="@string/current_field_Bench_PB"
        app:layout_constraintEnd_toStartOf="@+id/editBench_PB"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/currentSquat_PB" />

    <TextView
        android:id="@+id/currentSquat_PB"
        android:layout_width="135dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="16dp"
        android:text="@string/current_field_Squat_PB"
        app:layout_constraintEnd_toStartOf="@+id/editSquat_PB"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/currentOHP_PB" />

    <TextView
        android:id="@+id/currentOHP_PB"
        android:layout_width="135dp"
        android:layout_height="41dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/current_field_OHP_PB"
        app:layout_constraintBottom_toTopOf="@+id/currentSquat_PB"
        app:layout_constraintEnd_toStartOf="@+id/editOHP_PB"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.226" />

    <Button
        android:id="@+id/updatePBs"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="16dp"
        android:onClick="updateTMs"
        android:text="@string/updatePB"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/revertPBs"
        app:layout_constraintTop_toBottomOf="@+id/editDL_PB" />

    <EditText
        android:id="@+id/editOHP_PB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toTopOf="@+id/editSquat_PB"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/currentOHP_PB"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editSquat_PB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toTopOf="@+id/editBench_PB"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/currentSquat_PB"
        app:layout_constraintTop_toBottomOf="@+id/editOHP_PB" />

    <EditText
        android:id="@+id/editBench_PB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toTopOf="@+id/editDL_PB"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/currentBench_PB"
        app:layout_constraintTop_toBottomOf="@+id/editSquat_PB" />

    <EditText
        android:id="@+id/editDL_PB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toTopOf="@+id/updatePBs"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/currentDL_PB"
        app:layout_constraintTop_toBottomOf="@+id/editBench_PB"
        app:layout_constraintVertical_bias="0.333" />

    <TextView
        android:id="@+id/updatedPBs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="112dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/revertPBs" />

    <Button
        android:id="@+id/revertPBs"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="16dp"
        android:onClick="revertTMs"
        android:text="@string/revertTM"
        app:layout_constraintEnd_toStartOf="@+id/updatePBs"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/currentDL_PB" />

</androidx.constraintlayout.widget.ConstraintLayout>